--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"uniqid": "^5.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -42,6 +43,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/uniqid": "^5.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
 		"autoprefixer": "^10.4.14",
